<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/swapDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format"
            android:padding="4dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/swapSourceTrainerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swap_source_trainer"
            android:padding="4dp"

            app:layout_constraintEnd_toEndOf="@id/swapOtherPokemonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swapDateText" />

        <TextView
            android:id="@+id/swapSourceTrainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/swapSourceTrainerText"
            app:layout_constraintTop_toBottomOf="@id/swapDateText" />

        <TextView
            android:id="@+id/swapTargetTrainerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swap_target_trainer"
            android:padding="4dp"

            app:layout_constraintEnd_toEndOf="@id/swapOtherPokemonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swapSourceTrainerText" />

        <TextView
            android:id="@+id/swapTargetTrainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"

            app:layout_constraintEnd_toEndOf="@+id/swapSourceTrainer"
            app:layout_constraintStart_toEndOf="@id/swapTargetTrainerText"
            app:layout_constraintTop_toBottomOf="@id/swapSourceTrainer" />

        <TextView
            android:id="@+id/swapOtherPokemonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swap_other_pokemon"
            android:padding="4dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swapTargetTrainerText" />

        <TextView
            android:id="@+id/swapOtherPokemon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="4dp"

            app:layout_constraintBottom_toBottomOf="@id/swapOtherPokemonText"
            app:layout_constraintEnd_toEndOf="@id/swapTargetTrainer"
            app:layout_constraintStart_toEndOf="@id/swapOtherPokemonText"
            app:layout_constraintTop_toBottomOf="@id/swapTargetTrainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>